--- a/dynamic-searchbar/public/manifest.json
+++ b/dynamic-searchbar/public/manifest.json
@@ -1,21 +1,11 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "University Search",
+  "name": "Dynamic Searchbar for Universities in the USA",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "CtP_favicon_64x64.jpg",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "type": "image/jpg"
     }
   ],
   "start_url": ".",
