--- a/follow-app/package.json
+++ b/follow-app/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.0.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
